# citadel

./: .gitignore  README.md  citadel.py  install.sh  pyproject.toml  requirements.txt  setup.cfg
agents/Citadel/: Citadel.csproj  Citadel.sln
agents/Citadel/Static.Citadel/: Amsi.cs  Defender.cs  Http.cs  Logger.cs  Program.cs  Static.Citadel.csproj
api/: api.py
api/static/: styles.css
api/templates/: index.html  summary.html
citadel/: arguments.py  bytes_handler.py  capa_handler.py  db.py  ember.py  enums.py  etw.py  file_parser.py  graphs.py  import_catergories.py  llm.py  logger.py  lookup_tlsh.py  preprocess.py  reporter.py  yara_handler.py
citadel/models/: Bytes.py  Capa.py  DetectItEasy.py  EmberResult.py  FunctionMapping.py  PayloadFile.py  Task.py  Yara.py
citadel/pe/: die.py  lief.py  meta.py  parser.py  pefile.py  radare2.py
etw-rules/: dll-loads.yaml  dns-client-eventid3006.yaml  ldap-client-eventid30.yaml  thread-start.yaml  thread-stop.yaml  virtualalloc.yaml  wininet-connect-request-handle.yaml  wininet-eventid2004.yaml  wininet-http-request-handle.yaml  wininet-request-headers.yaml  wininet-root-handle.yaml  wininet-usagelog-request.yaml
frontend/: next.config.mjs  package-lock.json  package.json  sample-task.json  tailwind.config.js  task-payload.json
frontend/.cursor/rules/: visual-hierarchy.mdc
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/styles/: tabs.css
frontend/lib/: capa-utils.ts  mongodb.ts  types.ts
scripts/: gen_tlsh_map.sh  parse_mass_bins.py  predict.py  quick_tlsh_search.py  upload_tlsh_map.py
(+26 files in other folders)
