[metadata]
name = citadel
version = 0.0.1
description = Citadel is a payload analysis framework that enables users to review payloads prior to using them on engagements.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mez-0/citadel/

[options]
packages = find:
install_requires =
    asn1crypto==1.5.1
    chartkick==1.0.1
    cryptography==36.0.2
    dataclasses_json==0.6.7
    motor
    pymongo
    python_magic==0.4.27
    python_tlsh==4.5.0
    quart==0.20.0
    r2pipe==1.9.4
    Requests==2.32.3
    rich==13.9.4
    rich_argparse==1.6.0
    yara==1.7.7
